--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 asgiref==3.7.2
-Django==4.2.7
-djangorestframework==3.14.0
-mysqlclient==2.2.0
-pytz==2023.3.post1
-sqlparse==0.4.4
-typing_extensions==4.8.0
-tzdata==2023.3
-python == 3.9.10
+Django==3.2.6
+djangorestframework==3.12.4
+mysql-connector-python==8.0.25
+mysqlclient==2.1.0
