--- a/gunicorn/gunicorn.service
+++ b/gunicorn/gunicorn.service
@@ -11,6 +11,6 @@ ExecStart=/home/ubuntu/env/bin/gunicorn \
           --access-logfile - \
           --workers 3 \
           --bind unix:/run/gunicorn.sock \
-          mysite.wsgi:application
+          companyapi.wsgi:application
 [Install]
-WantedBy=multi-user.target
+WantedBy=multi-user.targetX
