--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ Django==3.2.6
 djangorestframework==3.12.4
 mysql-connector-python==8.0.25
 gunicorn==20.1.0
+whitenoise==6.2.0
 # mysqlclient==2.1.0
